--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "tatjsn <tatjsn@gmail.com> (https://github.com/tatjsn/)",
   "license": "ISC",
   "dependencies": {
+    "memoizee": "^0.4.1",
     "rxjs": "^5.0.3"
   },
   "devDependencies": {
